clean up notebook's rubbish comments

--- a/Downloads/FAA/ass1.ipynb
+++ b/Downloads/FAA/ass1.ipynb
@@ -9,7 +9,7 @@
    },
    "outputs": [],
    "source": [
-    "#newwwwws\n",
+   
     "\n",
     "# Installing required package\n",
     "!pip install yfinance --quiet\n",
@@ -45,7 +45,7 @@
     "    'BHARTIARTL.NS', 'MARUTI.NS'\n",
     "]\n",
     "\n",
-    "# Print tickers for confirmation\n",
+    "# Printing tickers for confirmation\n",
     "print(\"Selected tickers:\", tickers)"
    ]
   },
@@ -570,7 +570,6 @@
     "# Downloading 10 years of historical daily data correctly for adjusted close prices\n",
     "data = yf.download(tickers, start='2015-01-01', end='2025-01-01', auto_adjust=True)\n",
     "\n",
-    "# 'auto_adjust=True' means downloaded data is already adjusted for splits/dividends, so we can directly use the 'Close' column and the result will already be a DataFrame of Close prices\n",
     "\n",
     "# Displaying the first few rows\n",
     "data.head()\n"
@@ -2366,7 +2365,6 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# Confirming we have the cleaned covariance matrix from Part B\n",
     "print(\" Checking covariance matrix you will use:\")\n",
     "print(f\"Matrix dimensions: {cov_annual_clean.shape}\")\n",
     "print(f\"Ticker count: {len(cov_annual_clean.columns)}\")\n",
